styles.css
.my-main {
    background-image: url('ocean.jpg');
    background-size: cover;
    min-height: 100vh;
    font-size: larger;
    /* color: black; */
}

.navbar {
    opacity: 0.85;
}

.navbar-nav {
    margin-left: auto;
}

/* .navlink {
    color: black;
} */

.row {
    opacity: 0.9;
}

.col-sm-12 {
    color: black;
}

a {
    text-decoration: unset;
    color: unset;
    /* font-weight: bold; */
}

.about-row h4 {
    padding-top: 3%;
}

.projects-row h2 {
    padding-top: 2%;
}

.projects-row img {
    padding-top: 10%;
}

.projects-row span {
    font-weight: bold;
}

.contact-row h3 {
    padding-top: 2%;
    font-weight: bold;
}

li {
    font-size: xx-large;
}

/* #profile-pic {
    background-color: white;
} */

.card button {
    font-size: large;
    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
}

